--- a/01site/01himedia/css/style.css
+++ b/01site/01himedia/css/style.css
@@ -1,7 +1,10 @@
 @charset "utf-8";
-header#main_header{background-color: skyblue;}
+
+
+/* header start */
+header#main_header{}
 header#main_header>div.main_util{border-bottom: 1px solid #ddd;} /* bb+ */
-header#main_header>div.main_util>nav.util_menu{width: 980px; margin: 0 auto; background-color: pink;}
+header#main_header>div.main_util>nav.util_menu{width: 980px; margin: 0 auto; _background-color: pink;}
 nav.util_menu>ul{
 	float:right; _width: 300px; 
 } 
@@ -12,14 +15,14 @@ nav.util_menu>ul>li>a{
 	display: block; line-height: 30px; text-align: center; padding: 0 20px;
 }
 nav.util_menu>ul>li:after{
-	content:""; display: block; width: 1px; height: 10px; background-color: #f00; position: absolute; top: 10px;
+	content:""; display: block; width: 1px; height: 10px; background-color: #ddd; position: absolute; top: 10px;
 }
-/* nav.util_menu>ul>li:first-child:after{content:"";  display: none;} */
-nav.util_menu>ul>li:last-child:before{
-	content:""; display: block; width: 1px; height: 10px; background-color: #ff0; position: absolute; top: 10px; right: 0;
-}
+nav.util_menu>ul>li:first-child:after{content:"";  display: none;}
+/* nav.util_menu>ul>li:last-child:before{
+	content:""; display: block; width: 1px; height: 10px; background-color: #ddd; position: absolute; top: 10px; right: 0;
+} */
 header#main_header>div.main_middle{
-	width: 980px; height: 70px; margin: 0 auto; background-color: #eee; position: relative; padding-top: 11px;
+	width: 980px; height: 70px; margin: 0 auto; _background-color: #eee; position: relative; padding-top: 11px;
 }
 header#main_header>div.main_middle>h1{width: 180px; margin: 0 auto; text-align: center;  
 }
@@ -33,5 +36,55 @@ header#main_header>div.main_bottom>nav.main_gnb{
 	width: 980px; margin: 0 auto;
 }
 nav.main_gnb>ul{}
-nav.main_gnb>ul>li{float: left;}
-nav.main_gnb>ul>li>a{}
+nav.main_gnb>ul>li{
+	float: left; width: 163.33px; border-right: 1px solid #2867ad;
+}
+nav.main_gnb>ul>li:first-child{
+	border-left: 1px solid #2867ad;
+}
+nav.main_gnb>ul>li>a{
+	color:#fff; font-weight: bold; display: block; text-align: center; line-height: 45px;
+}
+/* header end */
+
+/* visual start */
+div.visual_wrap{
+	background: #325388 url(../images/visual_bg01.jpg) no-repeat center; height: 400px;
+}
+div.visual_wrap>div.visual{
+	width: 980px; height: 400px; margin: 0 auto; position: relative; overflow: hidden;
+}
+div.visual_wrap>div.visual>img{position: absolute;}
+div.visual_wrap>div.visual>img.visual_text{top: 80px;}
+div.visual_wrap>div.visual>img.visual_img{right: 0; top: 50px;}
+/* visual end */
+
+/* section start */
+section#container_wrap{background-color: #ccc; margin-bottom: 30px;}
+section#container_wrap>div.container{width: 980px; height: 196px; margin: 0 auto;}
+section#container_wrap>div.container img{display: block; margin: 0 auto; margin-bottom: 10px;}
+section#container_wrap>div.container>ul>li{
+	float: left; width: 196px; height: 196px; text-align: center; color: #fff; cursor:pointer;
+}
+
+section#container_wrap>div.container>ul>li>div.icon{padding-top: 15px;}
+
+section#container_wrap>div.container>ul>li>div.icon h3{margin-bottom: 8px;}
+section#container_wrap>div.container>ul>li>div.icon p{font-size: 0.7em;}
+
+section#container_wrap>div.container>ul>li:nth-child(1){background-color: #7c99b9;}
+section#container_wrap>div.container>ul>li:nth-child(2){background-color: #4f74a1;}
+section#container_wrap>div.container>ul>li:nth-child(3){background-color: #488ce0;}
+section#container_wrap>div.container>ul>li:nth-child(4){background-color: #3db5f2;}
+section#container_wrap>div.container>ul>li:nth-child(5){background-color: #96c8ff;}
+
+/* section end */
+article#container{width: 980px; margin: 0 auto;}
+article#container li{float: left; width: 310px; margin-right: 25px;}
+article#container li:last-child{margin-right:0;}
+article#container li div.cardbody{padding: 15px; border: 1px solid #ccc; border-top: none;}
+article#container img{display: block;}
+
+/* article start */
+
+/* article end */
