--- a/01site/01himedia/styletest.css
+++ b/01site/01himedia/styletest.css
@@ -1,21 +1,28 @@
 @charset "utf-8";
 
-		*{margin: 0; padding: 0;}
+		*{margin: 0; padding: 0; box-sizing: border-box;}
 		li{list-style: none;}
 		a:visited, a:link{text-decoration: none; color:#000;}
 		.clearfix:after{content:""; display: block; clear: both;}
 		/* style.css end */
 
 		/* header start */
-		header#main_header{background-color: skyblue;}
-		header#main_header>div.main_util{border-bottom: : 1px solid #ccc;}
-		header#main_header>div.main_util>nav.util_menu{width: 980px; background-color: red; margin: 0 auto;}
-		nav.util_menu>ul{width: 300px; background-color: pink; float: right;}
+		header#main_header{background-color: #ff0;}
+		header#main_header>div.main_util{border-bottom: : 1px solid black;}
+		header#main_header>div.main_util>nav.util_menu{width: 980px; margin: 0 auto; background-color: red;}
+		nav.util_menu>ul{background-color: pink; float: right;}
 		nav.util_menu>ul>li{float: left; position: relative;}
-		nav.util_menu>ul>li>a{display: block; text-align: center; padding: 0 15px; line-height: 30px;}
+		nav.util_menu>ul>li>a{display: block; text-align: center; padding: 0 20px; line-height: 30px;}
 		nav.util_menu>ul>li:after{ content:""; display: block; width: 1px; height: 10px;  background-color: #ccc; position: absolute; top: 10px; }
 		nav.util_menu>ul>li:first-child:after{content:""; display: none;}
 
+		/* header#main_header>div.main_middle{
+			width: 980px; height: 75px; background-color: #00f; margin: 0 auto; position: relative;
+		}
+		header#main_header>div.main_middle>h1{
+			width: 150px; margin: 0 auto; text-align: center; position: absolute;
+		}
+		header#main_header>div.main_middle>div.toggle.menu{width: 48px; height: 48px; position: absolute; top: 11px; right: 11px;} */
 		
 
 
