--- a/01site/01himedia/styletest.css
+++ b/01site/01himedia/styletest.css
@@ -1,31 +1,27 @@
 @charset "utf-8";
 
-		*{margin: 0; padding: 0; box-sizing: border-box;}
-		li{list-style: none;}
-		a:visited, a:link{text-decoration: none; color:#000;}
-		.clearfix:after{content:""; display: block; clear: both;}
-		/* style.css end */
+#header{}
+#header>div.header_line{border-bottom: 1px solid #000;}
+#header>div.header_line>nav.header_top{width: 980px; background-color: pink; margin: 0 auto;}
+#header>div.header_line>nav.header_top>ul{background-color: red; float: right;}
+#header>div.header_line>nav.header_top>ul>li{float: left;}
 
-		/* header start */
-		header#main_header{background-color: #ff0;}
-		header#main_header>div.main_util{border-bottom: : 1px solid black;}
-		header#main_header>div.main_util>nav.util_menu{width: 980px; margin: 0 auto; background-color: red;}
-		nav.util_menu>ul{background-color: pink; float: right;}
-		nav.util_menu>ul>li{float: left; position: relative;}
-		nav.util_menu>ul>li>a{display: block; text-align: center; padding: 0 20px; line-height: 30px;}
-		nav.util_menu>ul>li:after{ content:""; display: block; width: 1px; height: 10px;  background-color: #ccc; position: absolute; top: 10px; }
-		nav.util_menu>ul>li:first-child:after{content:""; display: none;}
+#header>div.header_mid{width: 980px; margin: 0 auto; padding: 10px 0; background-color: #ff0; position: relative;}
+#header>div.header_mid>h1{width: 200px; margin: 0 auto; background-color: pink; text-align: center;}
+#header>div.header_mid>img{display: block; position: absolute; right: 0; top: 5px;}
 
-		/* header#main_header>div.main_middle{
-			width: 980px; height: 75px; background-color: #00f; margin: 0 auto; position: relative;
-		}
-		header#main_header>div.main_middle>h1{
-			width: 150px; margin: 0 auto; text-align: center; position: absolute;
-		}
-		header#main_header>div.main_middle>div.toggle.menu{width: 48px; height: 48px; position: absolute; top: 11px; right: 11px;} */
-		
+#header>div.header_foot{background-color: #1c5da3; height: 45px;}
+#header>div.header_foot>ul{width: 980px; margin: 0 auto;}
+#header>div.header_foot>ul>li{
+	float: left; color:#fff; width: 163.33px; text-align: center; line-height: 45px;
+	border-right: 1px solid #336eac;}
+#header>div.header_foot>ul>li:first-child{border-left: 1px solid #336eac;}
+
+#visual{background: #223d6b url(images/visual_bg01.jpg) center no-repeat;}
+#visual>div.visual_main{position: relative;
+	width: 980px; height: 400px; margin: 0 auto; _background-color: pink; padding: 50px;}
+#visual>div.visual_main img:first-child{position: absolute; right: 0;}
+#visual>div.visual_main img:last-child{position: absolute; left: 0; top:80px;}
 
 
-		/* header end */
 
-		
