--- a/01site/01himedia/css/style.css
+++ b/01site/01himedia/css/style.css
@@ -49,7 +49,7 @@ nav.main_gnb>ul>li>a{
 
 /* visual start */
 div.visual_wrap{
-	background: #325388 url(../images/visual_bg01.jpg) no-repeat center; height: 400px;
+	background: #233b6b url(../images/visual_bg01.jpg) no-repeat center; height: 400px;
 }
 div.visual_wrap>div.visual{
 	width: 980px; height: 400px; margin: 0 auto; position: relative; overflow: hidden;
@@ -79,12 +79,26 @@ section#container_wrap>div.container>ul>li:nth-child(4){background-color: #3db5f
 section#container_wrap>div.container>ul>li:nth-child(5){background-color: #96c8ff;}
 
 /* section end */
-article#container{width: 980px; margin: 0 auto;}
+
+
+/* article start */
+article#container{width: 980px; margin: 0 auto; margin-bottom: 25px;}
 article#container li{float: left; width: 310px; margin-right: 25px;}
 article#container li:last-child{margin-right:0;}
 article#container li div.cardbody{padding: 15px; border: 1px solid #ccc; border-top: none;}
 article#container img{display: block;}
-
-/* article start */
-
 /* article end */
+
+article#containerOne{width: 980px; margin: 0 auto;}
+article#containerOne li{
+	float: left; width: 310px; height: 165px; margin-right: 25px; border: 1px solid #ccc;
+	position: relative; overflow: hidden;
+}
+article#containerOne li:last-child{margin-right:0;}
+article#containerOne li div.cardbody{padding: 15px;  _border-top: none; position: relative; width: 180px;}
+article#containerOne img{display: block; position: absolute; right: 10px; top: 15px;}
+article#containerOne li div.cardbody h3{margin-bottom: 10px;}
+article#containerOne li div.cardbody p{margin-bottom: 10px;}
+article#containerOne li div.cardbody a{color: #4b8ddd; font-size:0.8em;}
+
+
