--- a/01site/02koreauniv/css/style.css
+++ b/01site/02koreauniv/css/style.css
@@ -134,17 +134,48 @@ div.textWrap02 a{
 
 /* 컨테이너3시작 */
 div.textWrap03{
-	background-color: #00163b; height: 250px;
+	background-color: #00163b; height: 225px;
 }
-div.textWrap03 p{ padding: 20px 10px; color:#fff; font-size:18px; font-weight:bold; }
-div.textWrap03 ul li{float: left; margin: 30px 10px;}
+div.textWrap03 p{ padding: 25px 15px; color:#fff; font-size:22px; font-weight:bold; }
+div.textWrap03 ul li{float: left; margin: 10px 10px;}
 div.textWrap03 ul li:first-child{margin-left: 30px;}
 div.textWrap03 ul li:last-child{margin-right: 0;}
 div.textWrap03 ul li a{display: block;}
 div.textWrap03 ul li a img{display: block;}
 /* 컨테이너3끝 */
 
-
+/* 컨테이너4시작 */
+div.textWrap04{background-color: #1651b7; height: 225px;}
+div.textWrap04 p{
+	padding: 25px 15px; color:#fff; font-size:22px; font-weight:bold; 
+}
+div.textWrap04 p:after{
+	content:""; display: block; width: 270px; height: 3px; margin-top: 20px; background-color: #fff;
+}
+div.textWrap04 ul{font-size:14px; color:#fff;}
+div.textWrap04 ul.contents01 {float: left; margin-left: 15px;}
+div.textWrap04 ul.contents02 {float: right; margin-right: 15px;}
+div.textWrap04 ul li{padding-bottom: 5px;}
+/* 컨테이너4끝 */
+/* 컨테이너5시작 */
+div.textWrap05{background-color: #fff; height: 225px; }
+div.textWrap05 p{ padding: 25px 15px; color:#00183b; font-size:22px; font-weight:bold; }
+div.textWrap05 div.contents03{margin: 0 15px;}
+div.textWrap05 div.contents03>img{ display: block; float: left; margin-right: 10px;}
+div.textWrap05 div.contents03>p{
+	float: left; font-size: 14px; color:#4c4c4c;padding: 0;}
+div.textWrap05 div.contents03 ul{float: right;}
+div.textWrap05 div.contents03 ul li{float: left; margin-top: 10px; margin-right: 5px;}
+/* 컨테이너5끝 */
+/* 컨테이너6시작 */
+.textWrap06{ height: 225px; position: relative;}
+.textWrap06 a{
+	position: absolute; bottom: 0;
+	width: 300px; line-height: 50px; background-color:rgba(0,0,0,0.6);
+	text-align: center; font-size: 22px; font-weight: bold;
+	color:#fff;
+}
+/* 컨테이너6끝 */
 
 
 
