--- a/01site/03travelsite/css/style.css
+++ b/01site/03travelsite/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+body{font-family: 'Noto Sans KR', sans-serif;}
 #header{}
 #header div.topWrap{
 background-image: url(../images/headerbg01.jpg);
@@ -9,6 +9,7 @@ background-size: cover;
 height: 90px;
 _position: relative;
 }
+/*header 시작*/
 #header div.top{
 	position: relative;
 	width: 980px;
@@ -17,9 +18,9 @@ _position: relative;
 }
 #header div.top>h1{
 	width: 150px;
-	background-color: #f00;
 	text-align: center;
 	line-height: 90px;
+	color:#fff;
 }
 #header div.top>div.search{
 	width: 290px;
@@ -58,4 +59,164 @@ _position: relative;
 	float: left;
 	margin-right: 5px;
 }
+.nav{
+	background-color: #fbfbfb;
+	border-bottom: 6px solid #0e73a7;
+}
+.nav .gnb{
+	width: 980px;
+	margin: 0 auto;
+	position: relative;
+}
+.nav .gnb ul>li{
+	width: 163.33px;
+	line-height: 60px;
+	text-align: center;
+	float: left;
+	border-right: 1px solid #e5e5e5;
+}
+.nav .gnb ul>li:first-child{
+	border-left: 1px solid #e5e5e5;
+}
+.nav .gnb ul>li>img{
+	position: absolute; top: 30%; right: 360px;
+}
+/*header끝*/
+/*section시작*/
+#section_wrap{
+	width: 980px; margin: 0px auto; height: 1200px;
+	background-color: #f00; padding: 56px 0;
+}
+.section_bg{
+	height: 1200px;
+	background-image: url(../images/bg01.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+}
+.section_bg .balloon_wrap{
+	position: absolute;
+	top: 200px; right: 300px;
+	animation-name:myani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+}
+@keyframes myani{
+			from{top: 200px; }
+			to{top: 230px;}
+		}
+.section_bg>.text_wrap{
+	position: absolute;
+	top: 100px; right: 25%;
+	width: 370px;
+	color:#152630;
+}
+.section_bg>.text_wrap h2{
+	font-size: 70px;
+	padding: 15px 0;
+	font-weight: bold;
+}
+.section_bg>.text_wrap h2:after{
+	content:"";
+	display: block;
+	float: right;
+	width: 100px; height: 5px;
+	background-color: #152630;
+}
+.section_bg>.text_wrap p{
+	font-size: 30px
+}
+#section_wrap .section_wrap_top{
+	width: 100%; height: 556px;
+}
+#section_wrap .section_wrap_top>div{float: left;}
+#section_wrap .section_wrap_top .top_wrap01{
+	width: 482px; height: 100%;
+	margin-right: 16px;
+}
+#section_wrap .container_wrap01{
+	width: 100%; height: 300px; background-color: #fff;
+	margin-bottom: 16px;
+}
+#section_wrap .container_wrap02{
+	width: 100%; height: 240px; background-color: #fff;
+}
+#section_wrap .container_wrap02 ul{}
+#section_wrap .container_wrap02 ul li{
+	width: 233px;
+	height: 240px;
+	float: left;
+	margin-right: 16px;
+	position: relative;
+}
+#section_wrap .container_wrap02 ul li:last-child{margin-right: 0;}
+#section_wrap .container_wrap02 ul li img{display: block;}
+#section_wrap .container_wrap02 .text_wrap{
+	width: 100%; height: 50px; background-color: #152630;
+	position: absolute; bottom: 0; left: 0;
+	padding: 10px 20px;
+}
+#section_wrap .container_wrap02 ul li>.text_wrap>p{
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
+	margin-right: 30px;
+	color:#fff;
+}
+#section_wrap .container_wrap02 ul li>.text_wrap>p:last-child{
+	color: #71c565;
+	margin-right: 0;
+}
 
+
+
+
+#section_wrap .section_wrap_top .top_wrap02{
+	width: 482px; height: 100%;
+	background-color: #00f;
+}
+#section_wrap .section_wrap_bottom{
+	margin-top: 16px; background-color: pink;
+}
+#section_wrap .section_wrap_bottom ul>li{
+	float: left;
+	margin-right: 16px;
+	margin-bottom: 16px;
+	width: 233px; height: 240px;
+	position: relative;
+}
+#section_wrap .section_wrap_bottom ul>li>.text_wrap{
+	position: absolute;
+	bottom: 0; left: 0;
+	width: 233px; height: 50px;
+	padding: 10px 20px;
+	font-size: 16px;
+	font-weight: bold;
+	background-color:#152630;
+	color:#fff;
+}
+#section_wrap .section_wrap_bottom ul>li>.content_up>.text_wrap{
+
+}
+
+}
+#section_wrap .section_wrap_bottom ul>li:nth-child(4){
+	margin-right: 0;
+}
+#section_wrap .section_wrap_bottom ul>li:nth-child(5){
+	margin-bottom: 0;
+}
+#section_wrap .section_wrap_bottom ul>li:nth-child(6){
+	margin-bottom: 0;
+}
+#section_wrap .section_wrap_bottom ul>li:nth-child(7){
+	margin-bottom: 0;
+}
+#section_wrap .section_wrap_bottom ul>li:nth-child(8){
+	margin-right: 0;
+	margin-bottom: 0;
+}
+
+/*section끝*/
