--- a/20200109_form/css/style.css
+++ b/20200109_form/css/style.css
@@ -86,8 +86,10 @@ body{
 	text-align: center; line-height: 49px;
 	background-color: #f7f7f7; color: #999;
 }
-#content fieldset .field.birth input{float: left;}
-#content fieldset .field.birth select{
+#content fieldset .field.birth input,
+#content fieldset .field.confirm input{float: left;}
+#content fieldset .field.birth select,
+#content fieldset .field.confirm select{
 	float: left;
 	width: 110px; height: 29px;
 	border: 0 none;
@@ -97,7 +99,8 @@ body{
 	-webkit-appearance:none;
 	margin-top: 10px; margin-left: 17px;
 }
-#content fieldset .field.birth .field-wall{
+#content fieldset .field.birth .field-wall,
+#content fieldset .field.confirm .field-wall{
 	float: left;
 	width: 0;
 	height: 29px; 
@@ -106,6 +109,37 @@ body{
 	margin-top: 10px;
 }
 
+#content fieldset .confirm .btn-click{
+	width: 99px; height: 31px; border: 1px solid #dcdcdc;
+	position: absolute; top: 7px; right: 15px; cursor: pointer;
+	background-color: #fff;
+}
+
+#footer{text-align: center; padding: 48px 0 80px;}
+#footer .btm-menu ul{margin-left: 20px; position: relative;}
+#footer .btm-menu ul>li{
+	float: left;
+	border-right: 1px solid #999;
+}
+#footer .btm-menu ul>li:last-child{
+	border-right: 0;
+}
+#footer .btm-menu ul>li>a{display: block; color:#333; padding:0 8px;
+	line-height: 12px;
+}
+address{font-style: normal;}
+#footer address{padding: 20px;}
+#footer address strong a{
+	display: inline-block; width: 63px; height: 11px;
+	background-image: url(../images/ci_naver.gif);
+	text-indent:-9999px;
+}
+#footer address span a{
+	font-weight: bold;
+}
+
 .w458{width: 458px !important;}
+.w303{width: 303px !important;}
+.w205{width: 205px !important;}
 .w130{width: 130px !important;}
 .w145{width: 130px !important;}
