--- a/01site/03travelsite/css/style.css
+++ b/01site/03travelsite/css/style.css
@@ -186,17 +186,69 @@ _position: relative;
 #section_wrap .container_wrap01>.pagerWrap>div.pager>a>div>.icon.four{
 	background-position: 0 -90px;
 }
+/*슬라이더시작*/
 #section_wrap .container_wrap01>.sliderWrap{
-	width: 350px; float: right;
+	width: 350px; height: 300px; float: right;
 }
-#section_wrap .sliderWrap>ul.slider{}
-#section_wrap .sliderWrap>ul.slider>li{}
-#section_wrap .sliderWrap>ul.slider>li>form>fieldset{
-	border: 0 none;
+
+.bx-wrapper {
+    -moz-box-shadow: 0 none;
+    -webkit-box-shadow:  0 none;
+    box-shadow:  0 none;
+    border:  0 none;
 }
-#section_wrap .sliderWrap>ul.slider>li>form>fieldset>legend{
+
+#section_wrap .sliderWrap> .slider{width: 482px; height: 300px;}
+#section_wrap .sliderWrap> .slider>li{
+	width: 482px; height: 300px;
+}
+#section_wrap .sliderWrap> .slider>li>form{
+	width: 350px; height: 300px; background-color: pink;
+}
+#section_wrap fieldset legend{
 	display: block; right: 0; top: -9999px; position: absolute;
 }
+#section_wrap fieldset{
+	border: none;
+	width: 100%; height: 100%;
+	padding: 10px 30px;
+}
+#section_wrap fieldset label{display: block; padding-bottom: 5px; }
+#section_wrap fieldset select{
+	width: 100%; height: 30px;
+	border: 2px solid #ededed;
+	border-radius: 5px;
+}
+#section_wrap fieldset li{padding-top: 10px;}
+#section_wrap fieldset li>div{float: left;}
+#section_wrap fieldset li:nth-child(2) div>input{
+	border: 2px solid #ededed;
+	border-radius: 5px;
+	width: 130px;
+	height: 30px;
+}
+#section_wrap fieldset li:nth-child(2) div:first-child{
+	margin-right: 20px;
+}
+#section_wrap fieldset li:nth-child(3) div:first-child{
+	width: 120px;
+	margin-right: 20px;
+}
+#section_wrap fieldset li:nth-child(3) div:nth-child(2),
+#section_wrap fieldset li:nth-child(3) div:last-child{
+	width: 70px;
+}
+form>.btnArea{padding: 0 30px;}
+form>.btnArea>input{
+	width: 100%; height: 35px;
+	background-color: #ea4f1f;
+	color:#fff;
+	border: 0px solid #eee;
+	border-radius: 5px;
+	margin: 15px 0 23px 0;
+}
+
+
 
 
 
