--- a/01site/03travelsite/css/style.css
+++ b/01site/03travelsite/css/style.css
@@ -231,8 +231,8 @@ _position: relative;
 	margin-right: 20px;
 }
 #section_wrap fieldset li:nth-child(3) div:first-child{
-	width: 120px;
-	margin-right: 20px;
+	w
+	margin-right: 20pidth: 120px;x;
 }
 #section_wrap fieldset li:nth-child(3) div:nth-child(2),
 #section_wrap fieldset li:nth-child(3) div:last-child{
@@ -513,4 +513,47 @@ form>.btnArea>input{
 #footer .footerWrap>p{
 	font-size: 13px;
 	color:#666;
+}
+
+/*company시작*/
+section.subWrap{
+	position: relative;
+	height: 1200px;
+}
+section .section{
+	position: relative;
+	height: 290px; background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+section .company{
+	background-image: url(../images/companybg01.jpg);
+	
+}
+
+section .section>.textWrap{
+	position: absolute;
+	top: 30px; left: 50%; margin-left: -250px;
+	width: 500px;
+	font-size: 70px;
+	text-align: center;
+	color:#fff;
+}
+section .section>.textWrap>p:first-child,
+section .section>.textWrap>p>span{
+	font-weight: bold;
+}
+section .section>.textWrap>p:last-child{
+	padding-top: 15px;
+	font-size: 15px;
+}
+section .contentWrap{
+	width: 980px;
+	position: absolute;
+	top: 220px;
+	left: 50%; margin-left: -490px;
+}
+body{
+	background-image: url(../images/bg01.png);
+	background-repeat: repeat;
 }
