--- a/01site/06.seoulbotanicpark/css/sub_pc.css
+++ b/01site/06.seoulbotanicpark/css/sub_pc.css
@@ -1,17 +1,26 @@
 @charset "utf-8";
-body{_overflow: hidden;}
-header#header{
-   position: relative;
-   width: 100%;
-   height: 1010px;
-   background-color: #03511f;
+/*subheader*/
 
-   /*overflow: hidden;*/
+header#sub_header{
+   width: 100%; height: 460px;
 }
-header .headerbg{
-  width: 100%; height: 1010px;
-  background:url(../images/headerbg01.jpg) center no-repeat;
-  background-size: cover;
+.story{ background:url(../images/sub_main.jpg) center no-repeat;
+  background-size: cover;}
+.look{ background:url(../images/sub_main.jpg) center no-repeat;
+background-size: cover;}
+.use{ background:url(../images/sub_main.jpg) center no-repeat;
+background-size: cover;}
+.join{ background:url(../images/sub_main.jpg) center no-repeat;
+background-size: cover;}
+.plant{ background:url(../images/sub_main.jpg) center no-repeat;
+background-size: cover;}
+header#sub_header h2{
+   width: 300px;
+   margin: 0 auto;
+   padding-top: 170px;
+   font-size: 48px;
+   font-weight: bold;
+   color:#444;
 }
 
 header .header_top{
@@ -27,35 +36,54 @@ header .header_top>h1{
    float: left;
    height: 50px;
 }
-header .header_top .gnb{float: right;}
+header .header_top .gnb{
+   float: right;
+   width: 650px;
+   position: relative;
+}
 header .header_top .gnb>ul>{}
 header .header_top .gnb>ul>li{
    float: left;
+   width: 130px; height: 50px;
+   text-align: right;
 }
+header .header_top .gnb>ul>li:hover>a{
+   font-weight: bold;
+   color:#ffc123;
+}
+header .header_top .gnb>ul>li:hover .sub_menu{display: block;}
 header .header_top .gnb>ul>li>a{
    display: block;
    line-height: 50px;
-   margin-left: 50px;
+   transition:.3s;
 }
-header .header_top .gnb>ul>li>a>img{
-   display: block;
-   padding-top: 15px;
+/*서브메뉴*/
+.gnb li .sub_menu{
+   width: 100%; height: 50px; 
+   position: absolute; left: 0;
+   background-color: rgba(0,0,0,.3);
+   line-height: 50px;
+   padding-left:35px;
+   display: none;
+   transition:;
 }
+.gnb li .sub_menu li{
+   display: inline-block;
+   margin-right: 35px;
+   float: left;
+}
+.gnb li .sub_menu li>a{
+   display: block; color:#fff;
+   transition:.3s;
+   text-align: center;
+}
+.gnb li .sub_menu li>a:hover{
+   font-weight:bold; color:#ffc123;
+}
+/*toggle*/
 
-/*subheader*/
+.toggleMenu{display: none;}
 
-header#sub_header{
-   width: 100%; height: 460px;
-   background: url(../images/sub_main.jpg) no-repeat center;
-}
-header#sub_header h2{
-   width: 300px;
-   margin: 0 auto;
-   padding-top: 170px;
-   font-size: 48px;
-   font-weight: bold;
-   color:#444;
-}
 .dapsWrap{
    width: 100%; height: 90px; 
    background-color: #ffc223;
@@ -89,13 +117,19 @@ header#sub_header h2{
 	display: inline-block;
 	padding-right: 20px;
 }
+.dapsWrap .daps>ul>li>a .homebox{display: inline-block;}
+.dapsWrap .daps>ul>li>a .homebox img{float: left;}
+.dapsWrap .daps>ul>li>a .homehb{display: none;}
+
+.dapsWrap .daps>ul>li>a .arrowbox{display: inline-block;}
+.dapsWrap .daps>ul>li>a .arrowbox img{float: left;}
+.dapsWrap .daps>ul>li>a .arrowhb{display: none;}
 
 .submenu01{
 	width: 100%; height: 270px; 
 	background-color: rgba(255,194,35,.8);
 	padding: 10px 0;
 	display: none;
-   transition:.3s;
 }
 .submenu01 li{
 	height: 50px;
@@ -108,7 +142,12 @@ header#sub_header h2{
 }
 .submenu01 li a:hover{font-weight: bold; color:#fff;}
 
+.dapsWrap .daps>ul>li.daps00:hover .home{display: none;}
+.dapsWrap .daps>ul>li.daps00:hover .homehb{display: block;}
+
 .dapsWrap .daps>ul>li.daps01:hover .submenu01{display: block;}
+.dapsWrap .daps>ul>li.daps01:hover .arrow{display: none;}
+.dapsWrap .daps>ul>li.daps01:hover .arrowhb{display: block;}
 
 .submenu02{
 	width: 100%; height: 220px; 
@@ -128,6 +167,8 @@ header#sub_header h2{
 }
 .submenu02 li a:hover{font-weight: bold;}
 .dapsWrap .daps>ul>li.daps02:hover .submenu02{display: block;}
+.dapsWrap .daps>ul>li.daps02:hover .arrow{display: none;}
+.dapsWrap .daps>ul>li.daps02:hover .arrowhb{display: block;}
 
 /*daps3Wrap*/
 .daps3Wrap{
@@ -142,6 +183,8 @@ header#sub_header h2{
 	float: left;
 	width: 420px; height:120px;
 }
+.daps3.li2>ul>li{width: 50%;}
+.daps3.li4>ul>li{width: 25%;}
 .daps3Wrap .daps3 ul li a{
 	display: block;
 	text-align: center;
@@ -162,7 +205,8 @@ header#sub_header h2{
 }
 
 
-.contentWrap{width: 100%; height: 2940px;}
+.contentWrap{width: 1260px; margin: 0 auto;}
+.contentWrap.cp{padding: 0 0 200px 0;}
 
 
 /*footer*/
@@ -170,11 +214,6 @@ footer#footer{
    width: 100%; height: 590px; 
    background-color: #d2c37c;
    position: relative;
-}
-footer .tree{
-   width: 100%; height: 100%;
-   position: absolute; bottom: 0;
-   
 }
 footer img.trees{
    position: absolute; bottom: 0;
@@ -198,7 +237,12 @@ footer .dscall{
 }
 footer .ftext{
    width: 600px; margin: 0 auto;
-   display:table; text-align: center; 
+   display:table; text-align: center;
+   position: absolute; z-index: 1;
+   left: 50%; top: 70%;
+   transform:translateX(-50%);
+
+   z-index: 999;
 }
 footer .ftext a{}
 footer .ftext a p{
@@ -220,6 +264,3 @@ footer .wamark{
    position: absolute; top: 50%; right: 50%;
    transform:translate(450px,150px);
 }
-
-
-
